# Perso_pokedex

./: README.rst  pokedex_core.py  setup.cfg  test_pokedex_core.py
docs/source/: conf.py  index.rst  module.rst
sources/: type_table.csv  types-faiblesses-forces.csv
