[metadata]
name = Pokedex
version = 0.1
author = Nicolas COLLIN
author_email = collin-n@saint-louis29.net
description = Un pokedex à partir de fichiers csv
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Marylo29/Perso_pokedex
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7
install_requires =
    sphinx
    sphinx_rtd_theme